@@ -3,6 +3,7 @@
 	* Fixed problem: URL log was never emptied
 	* Indexing configuration records now can exist only on regular pages
 	* Fix: htdb:/ records did not show full URL in search results in certain cases
+	* Added feature to limit search on htdb:/ domains
 
 09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
